--- a/group project/page5.html
+++ b/group project/page5.html
@@ -8,7 +8,7 @@
         <p>
             
         </p>
-        <a href = "page6.html"><button class = button1>Previus Page</button></a>
-        
+        <a href = "page4.html"><button class = button1>Previus Page</button></a>
+        <a href = "page6.html"><button class = button2>Next Page</button></a>
     </body>
 </html>
