--- a/group project/page6.html
+++ b/group project/page6.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <head>
         <title>Snow White and the Seven Dwarfs</title>
     </head>
@@ -8,5 +8,7 @@
         <p>
             
         </p>
+        <a href = "page5.html"><button class = button1>Previus Page</button></a>
+        <a href = "page7.html"><button class = button2>Next Page</button></a>
     </body>
 </html>
