--- a/group project/page3.html
+++ b/group project/page3.html
@@ -5,9 +5,20 @@
         <title>Snow White and the Seven Dwarfs</title>
     </head>
     <body>
-        <p>
-            
+        <h1>The seven dwarfs</h1>
+        <br>
+        <h2>4.1 The cottage</h2>
+        <p>Little snow-white was so hungry and thirsty that she ate some vegetables and bread from
+            each plate and drank a drop of wine out of each mug, for she did not wish to take all from one
+            only. Then, as she was so tired, she laid herself down on one of the little beds, but none of
+            them suited her, one was too long, another too short, but at last she found that the seventh
+            one was right, and so she remained in it, said a prayer and went to sleep.
         </p>
+        <h2>4.2 The dwarfs</h2>
+        <p>When it was quite dark the owners of the cottage came back. They were seven dwarfs1 who
+            dug and delved in the mountains for ore. They lit their seven candles, and as it was now light
+            within the cottage they saw that someone had been there, for everything was not in the same
+            order in which they had left it.</p>
         <a href = "page2.html"><button class = button1>Previus Page</button></a>
         <a href = "page4.html"><button class = button2>Next Page</button></a>
     </body>
