--- a/group project/page4.html
+++ b/group project/page4.html
@@ -7,6 +7,26 @@
     <body>
         // from this silde froward the story will be done by D'Angelo, this will be the start of the assination attempts
         <p>
+           After resolving to teach the dwarves to read they danced the night away while some one else as 
+           geing ready to party the night away, but she would have to have her hopes dashed. The Queen walked up to the 
+           mirror with confidence and asked the magic mirror "Mirror, mirror on the wall, who is the fairest of them all?" 
+           as if she already knew the answer she began to smirk before it was wiped away just as quick as it appeared as th mirror began to speak
+           "You, my Queen, are fair, that is true
+           But Snow White, beyond the mountains
+           with the seven dwarves, 
+           Is still a thousand times fairer than you."  “That’s impossible!” screamed the Queen.  
+           “The girl is no longer alive!” “Snow White lives.” said the Magic Mirror.  And an image was shown on the mirror 
+           of Snow White living in the cottage of the Seven Dwarfs. The Queen turned red with rage.  She screamed, 
+           “Who does she think she is?!  Snow White will not get away with this!” At the cottage of the Dwarfs the 
+           next afternoon, when the Seven Dwarfs were away at work, there was a knock on the door. “Who is it?” said 
+           Snow White.  She remembered the warning of the Seven Dwarfs not to open the door to anyone. “It’s only a 
+           poor old woman,” came a squeaky voice, “selling lace.” Yet it was the evil Queen, disguised as an old woman. 
+            “I know all travelers in these woods must have worn shoes,” said her voice through the door.  
+            “Please let me in and show you how my lace will make your shoes tighter than new!” Snow White looked down
+            and saw the state of her shoes after her journey from the castle to the cottage and thought she could use new 
+            lace "Alright may come in." as she opened the door, the Queen gives Snow White the magical lace she got from the kings
+            treasureury and commands it to choke Snow White.
+             Incomplete
             
         </p>
         <a href = "page3.html"><button class = button1>Previus Page</button></a>
