--- a/group project/page3.html
+++ b/group project/page3.html
@@ -7,18 +7,47 @@
     <body>
         <h1>The seven dwarfs</h1>
         <br>
-        <h2>4.1 The cottage</h2>
-        <p>Little snow-white was so hungry and thirsty that she ate some vegetables and bread from
-            each plate and drank a drop of wine out of each mug, for she did not wish to take all from one
-            only. Then, as she was so tired, she laid herself down on one of the little beds, but none of
-            them suited her, one was too long, another too short, but at last she found that the seventh
-            one was right, and so she remained in it, said a prayer and went to sleep.
         </p>
         <h2>4.2 The dwarfs</h2>
         <p>When it was quite dark the owners of the cottage came back. They were seven dwarfs1 who
             dug and delved in the mountains for ore. They lit their seven candles, and as it was now light
             within the cottage they saw that someone had been there, for everything was not in the same
             order in which they had left it.</p>
+        <ol class = left>
+            <li>The first said, “who has been sitting on my chair.”</li>
+            <li>The second, “who has been eating off my plate.”</li>
+            <li>The third, “who has been taking some of my bread.”</li>
+            <li>The fourth, “who has been eating my vegetables.”</li>
+            <li> The fifth, “who has been using my fork.”</li>
+            <li>The sixth, “who has been cutting with my knife.”</li>
+            <li>The seventh, “who has been drinking out of my mug.”</li>
+
+        </ol>
+        <p>Then the first looked round and saw that there was a little hollow on his bed, and he said,
+            who has been getting into my bed. The others came up and each called out, somebody has been 
+            lying in my bed too. But the seventh when he looked at his bed saw little snow-white,
+            who was lying asleep therein. And he called the others, who came running up, and they cried
+            out with astonishment, and brought their seven little candles and let the light fall on little
+            snow-white. Oh, heavens, oh, heavens, cried they, what a lovely child. And they were so glad
+            that they did not wake her up, but let her sleep on in the bed. And the seventh dwarf slept
+            with his companions, one hour with each, and so passed the night. </p>
+        <h2>4.3 The encounter</h2>
+        <p>When it was morning little snow-white awoke, and was frightened when she saw the seven
+            dwarfs. But they were friendly and asked her what her name was. My name is snow-white,
+            she answered. How have you come to our house, said the dwarfs. Then she told them that
+            her step-mother had wished to have her killed, but that the huntsman had spared her life,
+            and that she had run for the whole day, until at last she had found their dwelling.
+        
+        </p>The dwarfs said, if you will take care of our house, cook, make the beds, wash, sew and knit,
+            and if you will keep everything neat and clean you can stay with us and you shall want for
+            nothing. Yes, said snow-white, with all my heart. And she stayed with them. She kept the
+            house in order for them. In the mornings they went to the mountains and looked for copper
+            and gold, in the evenings they came back, and then their supper had to be ready. The girl was
+            alone the whole day, so the good dwarfs warned her and said, beware of your step-mother,
+            she will soon know that you are here, be sure to let no one come in.
+        <p>
+
+        </p>
         <a href = "page2.html"><button class = button1>Previus Page</button></a>
         <a href = "page4.html"><button class = button2>Next Page</button></a>
     </body>
