--- a/group project/page2.html
+++ b/group project/page2.html
@@ -33,6 +33,13 @@
                 little mugs. Against the wall stood seven little beds side by side, and covered with snow-white
                 counterpanes.
             </p>
+            <h2>4.1 The cottage</h2>
+        <p>Little snow-white was so hungry and thirsty that she ate some vegetables and bread from
+            each plate and drank a drop of wine out of each mug, for she did not wish to take all from one
+            only. Then, as she was so tired, she laid herself down on one of the little beds, but none of
+            them suited her, one was too long, another too short, but at last she found that the seventh
+            one was right, and so she remained in it, said a prayer and went to sleep.</p>
+
         <a href = "index.html"><button class = button1>Previus Page</button></a>
         <a href = "page3.html"><button class = button2>Next Page</button></a>
     </body>
