full story upload

--- a/group project/page5.html
+++ b/group project/page5.html
@@ -6,7 +6,49 @@
     </head>
     <body>
         <p>
-            
+            When the dwarfs heard what had happened they said, “The old
+            peddler woman was no other than the wicked Queen; you must
+            beware of letting any one in when we are not here!” And when the
+            wicked woman got home she went to her glass and said, 
+            “Looking-glass against the wall, Who is fairest of us all?"
+
+            And it answered as before, “Queen, thou art of beauty rare, But
+            Snow-white living in the glen With the seven little men Is a
+            thousand times more fair."
+            When she heard that she was so struck with surprise that all the
+            blood left her heart, for she knew that Snow-white must still be
+            living.
+
+            “But now,” said she, “I will think of something that will be her
+            ruin.” And by witchcraft she made a poisoned comb. Then she
+            dressed herself up to look like another different sort of old woman.
+            So she went across the seven mountains and came to the house of
+            the seven dwarfs, and knocked at the door and cried, “Good wares
+            to sell! good wares to sell!” Snow-white looked out and said, “Go
+            away, I must not let anybody in.” “But you are not forbidden to
+            look,” said the old woman, taking out the poisoned comb and
+            holding it up. It pleased the poor child so much that she was
+            tempted to open the door; and when the bargain was made the old
+            woman said, “Now, for once, your hair shall be properly combed.”
+            Poor Snow-white, thinking no harm, let the old woman do as she
+            would, but no sooner was the comb put in her hair than the poison
+            began to work, and the poor girl fell down senseless.
+
+            “Now, you paragon of beauty,” said the wicked woman, “this is
+            the end of you,” and went off. By good luck it was now near
+            evening, and the seven little dwarfs came home. When they saw
+            Snow-white lying on the ground as dead, they thought directly
+            that it was the step-mother’s doing, and looked about, found the
+            poisoned comb, and no sooner had they drawn it out of her hair
+            than Snow-white came to herself, and related all that had passed.
+            Then they warned her once more to be on her guard, and never
+            again to let any one in at the door.
+
+            And the Queen went home and stood before the looking-glass and
+            said, “Looking-glass against the wall, Who is fairest of us all?"
+            And the looking-glass answered as before,
+            “Queen, thou art of beauty rare, But Snow-white living in the glen
+            With the seven little men Is a thousand times more fair."
         </p>
         <a href = "page4.html"><button class = button1>Previus Page</button></a>
         <a href = "page6.html"><button class = button2>Next Page</button></a>
