--- a/group project/page4.html
+++ b/group project/page4.html
@@ -5,7 +5,7 @@
         <title>Snow White and the Seven Dwarfs</title>
     </head>
     <body>
-        // from this silde froward the story will be done by D'Angelo, this will be the start of the assination attempts
+        <!--from this silde froward the story will be done by D'Angelo, this will be the start of the assination attempts-->
         <p>
             “With all my heart,” said Snow-white; and so she stayed, and kept
             the house in good order. In the morning the dwarfs went to the
@@ -47,7 +47,7 @@
 
             “Now you have done with being the fairest,” said the old woman
             as she hastened away.
-            
+
             Not long after that, towards evening, the seven dwarfs came home,
             and were terrified to see their dear Snow-white lying on the
             ground, without life or motion; they raised her up, and when they
