mirror change & p tag formating

--- a/group project/page4.html
+++ b/group project/page4.html
@@ -16,13 +16,15 @@
             into the house.” Now the Queen, having eaten Snow-white’s heart,
             as she supposed, felt quite sure that now she was the first and
             fairest, and so she came to her mirror, and said,
-            
-            “Looking-glass upon the wall, Who is fairest of us all?"
-            And the glass answered,
+        </p>
+        <p>    
+            “Mirror upon the wall, Who is fairest of us all?"
+            And the mirror answered,
             “Queen, thou art of beauty rare, But Snow-white living in the glen
             With the seven little men Is a thousand times more fair."
-
-            Then she was very angry, for the glass always spoke the truth, and
+        </p>
+        <p>
+            Then she was very angry, for the mirror always spoke the truth, and
             she knew that the huntsman must have deceived her, and that
             Snow-white must still be living. And she thought and thought how
             she could manage to make an end of her, for as long as she was not
@@ -33,27 +35,31 @@
             seven little dwarfs, and she knocked at the door and cried, “Fine
             wares to sell! fine wares to sell!” Snow-white peeped out of the
             window and cried, “Good-day, good woman, what have you to
-            sell?” “Good wares, fine wares,” answered she, “laces of all
+            sell?” “Good wares, fine wares,” answered she, “corset of all
             colors”; and she held up a piece that was woven of variegated silk.
-
+        </p>
+        <p>
             “I need not be afraid of letting in this good woman,” thought
             Snow-white, and she unbarred the door and bought the pretty lace.
-
+        </p>
+        <p>
             “What a figure you are, child!” said the old woman, “come and let
             me lace you properly for once.” Snow-white, suspecting nothing,
-            stood up before her, and let her lace her with the new lace; but the
+            stood up before her, and let her lace her with the new corset; but the
             old woman laced so quickly and tightly that it took Snowwhite’s
             breath away, and she fell down as dead.
-
+        </p>
+        <p>
             “Now you have done with being the fairest,” said the old woman
             as she hastened away.
-
+        </p>
+        <p>
             Not long after that, towards evening, the seven dwarfs came home,
             and were terrified to see their dear Snow-white lying on the
             ground, without life or motion; they raised her up, and when they
-            saw how tightly she was laced they cut the lace in two; then she
+            saw how tightly she was laced they cut the corset in two; then she
             began to draw breath, and little by little she returned to life.
-            
+        </p>
         </p>
         <a href = "page3.html"><button class = button1>Previus Page</button></a>
         <a href = "page5.html"><button class = button2>Next Page</button></a>
