--- a/group project/page5.html
+++ b/group project/page5.html
@@ -9,16 +9,18 @@
             When the dwarfs heard what had happened they said, “The old
             peddler woman was no other than the wicked Queen; you must
             beware of letting any one in when we are not here!” And when the
-            wicked woman got home she went to her glass and said, 
-            “Looking-glass against the wall, Who is fairest of us all?"
-
+            wicked woman got home she went to her mirror and said, 
+            “Mirror against the wall, Who is fairest of us all?"
+        </p>
+        <p>
             And it answered as before, “Queen, thou art of beauty rare, But
             Snow-white living in the glen With the seven little men Is a
             thousand times more fair."
             When she heard that she was so struck with surprise that all the
             blood left her heart, for she knew that Snow-white must still be
             living.
-
+        </p>
+        <p>
             “But now,” said she, “I will think of something that will be her
             ruin.” And by witchcraft she made a poisoned comb. Then she
             dressed herself up to look like another different sort of old woman.
@@ -33,7 +35,8 @@
             Poor Snow-white, thinking no harm, let the old woman do as she
             would, but no sooner was the comb put in her hair than the poison
             began to work, and the poor girl fell down senseless.
-
+        </p>    
+        <p>
             “Now, you paragon of beauty,” said the wicked woman, “this is
             the end of you,” and went off. By good luck it was now near
             evening, and the seven little dwarfs came home. When they saw
@@ -43,10 +46,11 @@
             than Snow-white came to herself, and related all that had passed.
             Then they warned her once more to be on her guard, and never
             again to let any one in at the door.
-
+        </p>    
+        <p>
             And the Queen went home and stood before the looking-glass and
-            said, “Looking-glass against the wall, Who is fairest of us all?"
-            And the looking-glass answered as before,
+            said, “Mirror against the wall, Who is fairest of us all?"
+            And the mirror answered as before,
             “Queen, thou art of beauty rare, But Snow-white living in the glen
             With the seven little men Is a thousand times more fair."
         </p>
