--- a/group project/page6.html
+++ b/group project/page6.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <p>
-            When she heard the looking-glass speak thus she trembled and
+            When she heard the mirror speak thus she trembled and
             shook with anger. “Snow-white shall die,” cried she, “though it
             should cost me my own life!” And then she went to a secret lonely
             chamber, where no one was likely to come, and there she made a
@@ -21,7 +21,8 @@
             woman; “I can easily get rid of my apples elsewhere. There, I will
             give you one.” “No,” answered Snow-white, “I dare not take
             anything.”
-
+        </p>
+        <p>
             “Are you afraid of poison?” said the woman, “look here, I will cut
             the apple in two pieces; you shall have the red side, I will have the
             white one.” For the apple was so cunningly made, that all the
@@ -33,14 +34,16 @@
             casting on her a terrible glance, laughed aloud and cried, “As
             white as snow, as red as blood, as black as ebony! This time the
             dwarfs will not be able to bring you to life again.” And when she
-            went home and asked the looking-glass, “Looking-glass against the
+            went home and asked the mirror, “Mirror against the
             wall, Who is fairest of us all?" at last it answered, “You are the
             fairest now of all.” Then her envious heart had peace, as much as
             an envious heart can have.
-
+        </p>
+        <p>
             The dwarfs, when they came home in the evening, found Snowwhite lying on the ground, and 
             there came no breath out of her mouth, and she was dead.
-
+        </p>
+        <p>
             They lifted her up, sought if anything poisonous was to be found,
             cut her laces, combed her hair, washed her with water and wine,
             but all was of no avail, the poor child was dead, and remained
@@ -48,7 +51,8 @@
             it, and wept and lamented three whole days. And then they would
             have buried her, but that she looked still as if she were living, with
             her beautiful blooming cheeks.
-
+        </p>
+        <p>
             So they said, “We cannot hide her away in the black ground.” And
             they had made a coffin of clear glass, so as to be looked into from
             all sides, and they laid her in it, and wrote in golden letters upon it
