--- a/group project/page4.html
+++ b/group project/page4.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <!--from this silde froward the story will be done by D'Angelo, this will be the start of the assination attempts-->
+        <h1>The Murder of Snow White</h1>
+        <br>
+        <h2>5.1 First Attempt</h2>
         <p>
             “With all my heart,” said Snow-white; and so she stayed, and kept
             the house in good order. In the morning the dwarfs went to the
