--- a/group project/page6.html
+++ b/group project/page6.html
@@ -5,6 +5,7 @@
         <title>Snow White and the Seven Dwarfs</title>
     </head>
     <body>
+        <h2>5.3 Third Attempt</h2>
         <p>
             When she heard the mirror speak thus she trembled and
             shook with anger. “Snow-white shall die,” cried she, “though it
@@ -39,6 +40,8 @@
             fairest now of all.” Then her envious heart had peace, as much as
             an envious heart can have.
         </p>
+        <h1>The funeral</h1>
+        <br>
         <p>
             The dwarfs, when they came home in the evening, found Snowwhite lying on the ground, and 
             there came no breath out of her mouth, and she was dead.
