--- a/group project/page7.html
+++ b/group project/page7.html
@@ -5,6 +5,7 @@
         <title>Snow White and the Seven Dwarfs</title>
     </head>
     <body>
+        <h1>The Prince</h1>
         <p>
             It happened, however, that one day a King’s son rode through the
             wood and up to the dwarfs’ house, which was near it. He saw on
