--- a/group project/page5.html
+++ b/group project/page5.html
@@ -5,6 +5,7 @@
         <title>Snow White and the Seven Dwarfs</title>
     </head>
     <body>
+        <h2>5.2 Second Attempt</h2>
         <p>
             When the dwarfs heard what had happened they said, “The old
             peddler woman was no other than the wicked Queen; you must
