--- a/group project/page7.html
+++ b/group project/page7.html
@@ -57,6 +57,6 @@
             THE END  
         </p>
         <a href = "page6.html"><button class = button1>Previus Page</button></a>
-        
+        <a href = "source.html"><button class = button2>Source Page</button></a>
     </body>
 </html>
