--- a/group project/source.html
+++ b/group project/source.html
@@ -1,3 +1,5 @@
+<!--slide done by Aidan-->
 <img src = "snowwhite.jpg" class = "size"  alt ="Snow White">
 <p>Snow White by Warwick Goble <a href = "https://www.publicdomainpictures.net/en/view-image.php?image=189413&picture=snow-white">Publicdomainpictures</a> </p>
+<p>Original Story written by <em>The Brothers Grimm</em></p>
 <a href = "page7.html"><button class = button1>Previus Page</button></a>
